--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -35,11 +35,15 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
 />
+<!--animate css-->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+/>
 
 <!--css Style-->
 <link rel="stylesheet" href="/css/style.css" />
 <link rel="stylesheet" href="/css/register_style.css" />
-<link rel="stylesheet" href="/css/product_detail.css" />
 <link rel="stylesheet" href="/css/Product_cart.css" />
 
 <!--boostrap script-->
