--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
-<footer class="bg-dark px-0">
-  <div class="container d-flex flex-wrap mt-0 pt-5">
+<footer id="footer" class="bg-dark px-0">
+  <div class="container d-flex flex-wrap mt-0 w-100 pt-5">
     <div class="row w-100 m-auto">
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
           <h5 class="text-light">Contacto</h5>
