--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -77,7 +77,7 @@
                         <a class="nav-link" href="#"><i class="fas fa-kiwi-bird"></i> Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-headset"></i> Contacto</a>
+                        <a class="nav-link" href="/#footer"><i class="fas fa-headset"></i> Contacto</a>
                     </li>
 
                 </ul>
@@ -125,7 +125,7 @@
                     <a class="nav-link" href="#">Nosotros </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="/#footer">Contacto</a>
                 </li>
 
             </ul>
