--- a/views/product-edit-form.ejs
+++ b/views/product-edit-form.ejs
@@ -9,7 +9,7 @@
   <body class="bg_color">
     <!--header/javi -->
     <%- include("partials/header") %>
-     <form class="col-xl-9 col-lg-9 col-md-9 col-sm-12 m-auto bg-white text-dark p-4 rounded"  action="/products/<%= product.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+     <form class="col-xl-9 col-lg-9 col-md-9 col-sm-12 mt-5 mb-5 mr-auto ml-auto bg-white text-dark p-4 rounded animate__animated animate__zoomIn"  action="/products/<%= product.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                 <div class="register-title col-12">
                     <h2 class="title_categoria">
                         <i class="fas fa-hand-holding-usd text-black-50"></i></i> Vende por Canilla<strong>Libre</strong>.com
