--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -21,9 +21,9 @@
           </div>
           <div class="dropdown-divider"></div>
           <div class="media row d-flex align-items-center">
-            <div class="col-6 align-items-center d-flex justify-content-center ">
+            <div class="col-6 align-items-center d-flex justify-content-center mb-4">
               <!--imagen-->
-              <img src="<%= product.image1 %>" alt="product image" class="product-detail-img" value="Show Images">
+              <img src="<%= product.image1 %>" alt="product image" width="150" class="product-detail-img" value="Show Images">
             </div>
             <div class="media-body col-6 border-left">
               <!--cantidad-->
@@ -44,7 +44,7 @@
             </div>
 
             <!-- comprar / agregar al carrito -->
-            <div class="col-12 d-flex justify-content-center mb-5">
+            <div class="col-12 d-flex justify-content-center mb-3">
               <button type="submit" class="btn btn-outline-warning mr-2">
                 <i class="fa fa-shopping-cart"></i> Agregar al Carrito
               </button>
