--- a/views/form_prod.ejs
+++ b/views/form_prod.ejs
@@ -106,13 +106,13 @@
                     <div class="form-group col-4">
                         <p class="mb-1">Primera imagen</p>
                         <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="sell_image_1" lang="es" required name="image1"/>
-                            <label class="custom-file-label" for="sell_image_1">Seleccionar Archivo</label>
+                            <input type="file" class="custom-file-input" id="image1" lang="es" required name="image1"/>
+                            <label class="custom-file-label" for="image1">Seleccionar Archivo</label>
                         </div>
                     </div>
                     <!-- imagen2 -->
                     <div class="form-group col-4">
-                        <p class="mb-1">Segunda Imagen<em> - Opcional -</em></p>
+                        <p class="mb-1">Segunda Imagen<em></em></p>
                  <div class="custom-file">
                             <input type="file" class="custom-file-input" id="sell_image_2" lang="es"/>
                             <label class="custom-file-label" for="sell_image_2">Seleccionar Archivo</label>
@@ -120,7 +120,7 @@
                     </div>
                     <!-- imagen3 -->
                     <div class="form-group col-4">
-                        <p class="mb-1">Tercera imagen<em> - Opcional -</em></p>
+                        <p class="mb-1">Tercera imagen<em></em></p>
                         <div class="custom-file">
                             <input type="file" class="custom-file-input" id="sell_image_3" lang="es"/>
                             <label class="custom-file-label" for="sell_image_3">Seleccionar Archivo</label>
@@ -133,7 +133,7 @@
                 <div class="row align-items-center justify-content-between bg-light m-1">
                     <!-- precio -->
                     <div class="form-group col-3">
-                        <label for="sell_price"><i class="fas fa-hand-holding-usd"></i> Precio</label>
+                        <label for="sell_price"><i class="fas fa-hand-holding-usd"></i> Precio Unidad</label>
                         <input type="number" class="form-control" id="sell_price" placeholder="precio"
                             aria-describedby="sell_price" name="precio" />
                     </div>
@@ -197,6 +197,15 @@
                 
             </form>
         </div>
+        <!--script para filename-->
+        <script>
+            $("#image1").on("change", function () {
+                //get the file name
+                var fileName = $(this).val();
+                //replace the "Choose a file" label
+                $(this).next(".custom-file-label").html(fileName);
+            });
+        </script>
     </section>
 </body>
       
