--- a/views/products.ejs
+++ b/views/products.ejs
@@ -22,8 +22,8 @@
                       <div class="col-12 col-sm-6 col-lg-3">
                         <section class="product-box">
                           <a href="/products/<%=products.id%>">
-                            <figure class="product-box_image">
-                              <img src="<%=products.image1%>" alt="imagen de producto" />
+                            <figure class="product-box_image ">
+                              <img src="<%=products.image1%>" width="150" alt="imagen de producto" />
                               <article class="product-box_data">
                                 <h2><%=products.marca%></h2>
                                 <span><%=products.cantidad +" x " + products.precio%></span>
