--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -87,12 +87,12 @@
           <!-- editar / borrar -->
           <div class="box-edit col-12 d-flex justify-content-center mt-5 mb-2 border rounded p-2">
             <a href="/products/<%= product.id%>/edit">
-              <button type="submit" class="btn btn-outline-secondary mr-2 text-secondary">
-                <i class="far fa-edit"></i> Editar
+              <button type="submit" class="btn btn-outline-secondary mr-2">
+                <i class="far fa-edit"></i> Editar Publicación
               </button>
             </a>
-            <button type="submit" class="btn btn-outline-danger ml-2 text-danger" data-toggle="modal" data-target="#Eliminar_Modal">
-              <i class="far fa-trash-alt"></i> Eliminar
+            <button type="submit" class="btn btn-outline-danger ml-2" data-toggle="modal" data-target="#Eliminar_Modal">
+              <i class="far fa-trash-alt"></i> Eliminar Publicación
             </button>
                           <!--Buttom Alert-->
                           <div class="modal fade" id="Eliminar_Modal" tabindex="-1" role="dialog" aria-labelledby="Eliminar_Modal_label"
